--- a/composer.json
+++ b/composer.json
@@ -29,6 +29,7 @@
         "symfony/http-foundation": "^2.7",
         "symfony/http-kernel": "^2.7",
         "symfony/routing": "^2.7",
-        "nette/utils": "^2.3"
+        "nette/utils": "^2.3",
+        "nategood/httpful": "*"
     }
 }
